<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/dp_50"
    android:paddingRight="@dimen/dp_50"
    android:paddingTop="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_16"
    android:orientation="vertical"
    android:background="@android:color/white">

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/btn_gallery"
        android:layout_height="@dimen/dp_60"
        android:layout_width="match_parent"
        android:text="@string/add_from_gallery"
        android:textSize="@dimen/sp_16"/>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/btn_camera"
        android:layout_height="@dimen/dp_60"
        android:layout_width="match_parent"
        android:text="@string/camera"
        android:textSize="@dimen/sp_16"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_height="@dimen/dp_60"
        android:layout_width="match_parent"
        android:text="@string/cancel"
        android:textSize="@dimen/sp_16"/>

</LinearLayout>

