<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_Username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_above="@+id/et_Password"
        style="@style/AppTheme.EditText.Big"
        android:layout_marginBottom="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_55"
        android:layout_marginRight="@dimen/dp_55"
        android:drawableLeft="@drawable/selector_ic_person"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_above="@+id/tv_forgetPassword"
        style="@style/AppTheme.EditText.Big"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_55"
        android:layout_marginRight="@dimen/dp_55"
        android:drawableLeft="@drawable/selector_ic_lock"
        android:hint="@string/please_enter_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_Login"
        android:layout_alignRight="@+id/btn_Login"
        android:layout_marginBottom="@dimen/dp_6"
        android:text="@string/forget_password"
        android:textColor="#c1a894"
        android:textSize="@dimen/sp_16" />

    <Button
        android:id="@+id/btn_Login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_260"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:enabled="false"
        android:text="@string/login"
        android:textSize="@dimen/sp_16" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:src="@mipmap/screen_bottom_line" />

</RelativeLayout>
