<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginBottom="3dp"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_marginTop="3dp"
              android:background="@mipmap/up_bg"
              android:orientation="vertical"
              tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_8"
        android:paddingTop="@dimen/dp_20">

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_treasure_size"
            android:gravity="center"
            android:paddingTop="@dimen/dp_20"
            android:text="@string/size_normal"
            android:textColor="@color/text_color_white"/>

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_treasure_type"
            android:gravity="center"
            android:paddingTop="@dimen/dp_20"
            android:text="@string/type_traditional"
            android:textColor="@color/text_color_white"/>

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_treasure_level"
            android:gravity="center"
            android:paddingTop="@dimen/dp_20"
            android:text="@string/level_easy"
            android:textColor="@color/text_color_white"/>

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_20">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/treasure_size"
            android:textColor="@color/text_color_hint"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/treasure_type"
            android:textColor="@color/text_color_hint"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/treasure_level"
            android:textColor="@color/text_color_hint"
            android:textSize="@dimen/sp_16"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/treasure_details"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"/>

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:maxLength="140"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"/>
    </LinearLayout>

</LinearLayout>

